<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple notes</string>
    <string name="menu_name">Simple Note</string>
    <string name="new_note">Compose a note...</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_note">New note</string>
    <string name="auto_sync">Auto sync</string>
    <string name="title_activity_view_note">View note</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search notes</string>
    <string name="title_activity_search">Simple Note</string>
    <string name="action_save">Save</string>
    <string name="action_attach">Attach</string>
    <string name="action_reminder">Reminder</string>
    <string name="action_share">Share</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_sync">Sync</string>
    <string name="action_redo">Redo</string>
    <string name="action_undo">Undo</string>
    <string name="title_activity_settings">Settings</string>

</resources>