<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.amardeep.simplenotes.NewNote" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
     <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_save"
        android:icon="@drawable/ic_done_white_24dp"/>
     <item
        android:id="@+id/action_attach"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_attach"
        android:icon="@drawable/ic_attach_file_white_24dp"/>
     <item
        android:id="@+id/action_redo"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_redo"
        android:icon="@drawable/ic_redo_white_24dp"/>
     <item
        android:id="@+id/action_undo"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_undo"
        android:icon="@drawable/ic_undo_white_24dp"/>
      <item
        android:id="@+id/action_reminder"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_reminder"
        android:icon="@drawable/ic_alarm_add_white_24dp"/>
    

</menu>
