<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.amardeep.simplenotes.ViewNote" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_create_white_24dp"
        android:title="@string/action_edit"/>
    <item
        android:id="@+id/action_note_save"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/action_save"/>
     <item
        android:id="@+id/action_attach"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_attach_file_white_24dp"
        android:title="@string/action_attach"/>
      <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/action_delete"/>
     <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/action_share"/>
     

</menu>
